# promptus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE-2.0  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/promptus/: Cargo.toml
crates/promptus-catena/: Cargo.toml
crates/promptus-catena/examples/: agent.rs  simple_chain.rs  web_search.rs
crates/promptus-catena/src/: agent.rs  error.rs  lib.rs  memory.rs  parsers.rs  runnable.rs  template.rs  tool.rs
crates/promptus-core/: Cargo.toml
crates/promptus-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/promptus-openai/: Cargo.toml
crates/promptus-openai/src/: lib.rs  mapping.rs  provider.rs
crates/promptus-openai/src/wire/: mod.rs  request.rs  response.rs
crates/promptus/examples/: basic_chat.rs  streaming.rs  tool_calling.rs
crates/promptus/src/: builder.rs  client.rs  lib.rs
