[workspace]
resolver = "3"
members = [
  "crates/promptus",
  "crates/promptus-catena",
  "crates/promptus-core",
  "crates/promptus-openai"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
futures = "0.3"
promptus-catena = { path = "crates/promptus-catena" }
promptus-core = { path = "crates/promptus-core" }
promptus-openai = { path = "crates/promptus-openai" }
reqwest = {
  version = "0.12",
  default-features = false,
  features = ["json", "rustls-tls", "stream"]
}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }

[workspace.lints.clippy]

[workspace.lints.rust]
unsafe_code = "forbid"
