[package]
name = "promptus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider-agnostic types, traits, and errors for the Promptus LLM client library"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
futures = "0.3"
