[package]
name = "promptus-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible chat completions provider for Promptus — works with any provider speaking the OpenAI wire format"

[lints]
workspace = true

[dependencies]
promptus-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
