[package]
name = "promptus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider-agnostic LLM client library — the public facade for Promptus"

[lints]
workspace = true

[dependencies]
promptus-catena.workspace = true
promptus-core.workspace = true
promptus-openai.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
